--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/openaplis/ap-label/issues"
   },
-  "homepage": "https://github.com/openaplis/ap-label#readme"
+  "homepage": "https://github.com/openaplis/ap-label#readme",
+  "dependencies": {
+    "bwip-js": "^1.6.3",
+    "jimp": "^0.2.28"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
+  }
 }
